# oralis

./: .envrc  .gitignore  CLAUDE.md  LICENSE  README.md  download_experimental_voices.sh  oralis.py  preprocess_text.py  pyproject.toml  studio.sh
.claude/rules/: api.md  git.md  style.md  testing.md
config/: abbr.json
oralis_studio/: __init__.py
oralis_studio/modular/: configuration_vibevoice.py  modeling_vibevoice_streaming.py  modeling_vibevoice_streaming_inference.py
oralis_studio/processor/: __init__.py  vibevoice_streaming_processor.py
tests/: test_preprocess_text.py  test_preprocessor.py  test_project_store.py  test_routes.py  test_synthesizer.py  test_tts_progress.py
web/: app.py  preprocessor.py  project_store.py  synthesizer.py
web/static/: app.css  app.js  player.js
web/templates/: base.html  player_bar.html  project.html  project_new.html  project_source.html  run_active.html  run_chunk.html  run_item.html  run_view.html
